# colorful

./: .gitignore  .travis.yml  Cargo.toml  README.md  code_of_conduct.md  license
example/: basic_usage.rs  rainbow.rs  warn.rs
examples/: bar_chart.rs  basic_usage.rs  gradient.rs  gradient_multiple_lines.rs  rainbow.rs
src/: lib.rs
src/core/: color_string.rs  colors.rs  hsl.rs  mod.rs  rgb.rs  style.rs  symbols.rs
tests/: test_all_color.rs  test_basic.rs  test_gradient.rs  test_hsl.rs
