[package]
name = "colorful"
version = "0.2.0"
authors = ["da2018 <da2018t@gmail.com>"]

description = "Make your terminal output colorful"
license = "MIT"
homepage = "https://github.com/rocketsman/colorful"
readme = "README.md"
keywords = ["cli","colors","terminal"]
categories = ["cli","colors","terminal"]
repository = "https://github.com/rocketsman/colorful"
exclude = ["images/*","examples"]

[dependencies]
