[package]
name = "colorful"
version = "0.2.2"
authors = ["da2018 <da2018t@gmail.com>"]

description = "Make your terminal output colorful"
license = "MIT"
homepage = "https://github.com/mellite/colorful"
readme = "README.md"
keywords = ["cli","colors","terminal"]
categories = ["cli","colors","terminal"]
repository = "https://github.com/mellite/colorful"
exclude = ["images/*","examples"]

[dependencies]
